<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_item"
            android:title="@string/work_list"
            android:checked="true"
            android:visible="true"
            android:icon="@mipmap/work"/>
        <item
            android:id="@+id/friends_item"
            android:title="@string/driver_list"
            android:checked="true"
            android:visible="true"
            android:icon="@mipmap/driver"/>
        <item
            android:id="@+id/pictures_item"
            android:title="@string/gas_list"
            android:checked="true"
            android:visible="true"
            android:icon="@drawable/ic_menu_camera"/>


    </group>
</menu>